# ecommerce-data-lakehouse

./: .env.example  Makefile  README.md  pyproject.toml  requirements.txt
airflow/dags/: ecommerce_elt_dag.py
scripts/: generate_data.py
sql/analytics/: customer_cohort_retention.sql  product_performance.sql  revenue_trends.sql  rfm_segmentation.sql
sql/schema/: 01_create_raw_tables.sql
